# zkp-hackathon

./: .gitmodules  Cargo.toml
artifacts/: checksums.txt  cw721_fixed_price.wasm  jaken.wasm
contracts/cw721-base/: Cargo.toml
contracts/cw721-fixed-price/: Cargo.toml
contracts/hello_world/: Cargo.toml
contracts/hello_world/src/: contract.rs
contracts/jaken/: Cargo.toml
contracts/jaken/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  state.rs  utils.rs
src/: contract.rs  state.rs
