[package]
name = "zkp-hackathon"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "2.0.2"
cosmwasm-std = { version = "2.0.2", features = ["stargate", "staking"] }
cw-storage-plus = { version = "2.0.0" }
cw2 = { version = "2.0.0" }
schemars = "0.8.15"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
thiserror = "1"
