[workspace]
members = ["packages/*", "contracts/*"]

[workspace.package]
version       = "2.0.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/CosmWasm/cw-nfts"
homepage      = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"
rust-version  = "1.73"


[workspace.dependencies]
cosmwasm-schema = "2.0.2"
cosmwasm-std = { version = "^2.0", features = ["stargate", "staking"] }
cosmwasm-storage = "1.5.2"
cw-storage-plus = { version = "2.0.0" }
cw2 = { version = "2.0.0" }
serde_json = "1"

cw-ownable = { version = "2.0", git = "https://github.com/PFC-Validator/cw-plus-plus", branch = "v2.0.0-wip" }
cw-utils        = "^2.0"
cw721           = { version = "*", path = "./packages/cw721" }
cw721-base      = { version = "*", path = "./contracts/cw721-base" }
jaken = { version = "*", path = "./contracts/jaken" }
cw721-base-016  = { version = "0.16.0", package = "cw721-base" }
cw-multi-test   = "^2.0"
cw20            = "^2.0"
schemars        = "^0.8"
serde           = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror       = "^1.0"

[profile.release.package.cw721-fixed-price]
codegen-units = 1
incremental   = false